# mogonet_pkg

./: README.md  pyproject.toml
src/: .gitignore
src/mogonet/: feat_importance.py  prepare_trte_data.py  test_mogonet.py  train_mogonet.py  train_test.py  utils.py
